# PoissonReconCGAL

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
data/: a.lua  bar.edge  bar.ele  bar.face  bar.node  bar.ply  bar.poly  fwk_triangles.off  layerblock.edge  layerblock.face  layerblock.node  layerblock.poly
examples/: compute_normal.h  compute_vertex_normal.h  constrained_tetrahedralization.h  export_mesh.h  extract_point_and_normal.h  poissonRecon.h  read_berp.h
geometry/: Face.h  Hybrid_domain.h  vector3.h
model/: geometry_element.h
service/brep_process/: brep_process.h
service/cgal/get_intersections/: clip_mesh.h  get_intersections.h
service/cgal/mesh_boolean/: mesh_difference.h
service/cgal/multi_complex_mesh/: multi_complex_mesh.h
service/cgal/polyhedron/: make_polyhedron.h
service/cgal/recovery_edges_mesh/: recovery_edges_mesh.h
service/cgal/tetrahedron/: tet_surface_mesh_without_feature.h  tetrahedrzlization.h
service/cgal/triangulation/: triangulation_2d.cpp
service/pcl/point_cloud/: view_point_cloud.h
service/vtk/point_cloud/: view_point_cloud.h
service/weighted_points/: weighted_points_process.h
tests/: brep_test.cpp  mesh_difference_test.cpp  mesh_intersection_test.cpp  remove_duplicate_points.cpp  remove_duplicate_points_test.cpp  test.cpp  tetrahedrzlization_test.cpp  weighted_points_test.cpp
utils/: converter.h  implicit_function.cpp  implicit_functions.h  medit_io.cpp  medit_io.h  read_boundary_representation.h  read_polylines.h
